--- a/cc/CMakeLists.txt
+++ b/cc/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.19)
 project(uctc)
 set(CMAKE_CXX_STANDARD 17)
 set(CXX g++)
-set(CMAKE_CXX_FLAGS -Og)
+set(CMAKE_CXX_FLAGS -O3)
 set(PYBIND11_DIR /home/hexu/miniconda3/lib/python3.11/site-packages/pybind11)
 set(PYBIND11_FINDPYTHON ON)
 find_package(pybind11 CONFIG REQUIRED PATHS ${PYBIND11_DIR})
